[package]
name = "data-pile"
version = "0.6.1"
authors = ["Yevhenii Babichenko <eugene.babichenko@protonmail.com>"]
edition = "2018"
description = "A simple and fast append-only data store"
documentation = "https://docs.rs/data-pile"
readme = "README.md"
homepage = "https://github.com/eugene-babichenko/data-pile"
repository = "https://github.com/eugene-babichenko/data-pile"
license-file = "LICENSE"
keywords = ["append-only", "key-value", "storage", "database"]
categories = ["database"]

[dependencies]
memmap2 = "0.9.5"

[dev-dependencies]
tempfile = "3.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
criterion = "0.5.1"
rand = "0.8.5"

[[bench]]
harness = false
name = "put_get"

[profile.bench]
debug = true
